Finished project with download functionality for saving text files

--- a/Case Converter/task/src/index.html
+++ b/Case Converter/task/src/index.html
@@ -8,12 +8,15 @@
 <body>
 <div class="container">
 	<div class="title">Case Converter</div>
+	// Text
 	<textarea name="" id="text-input"></textarea>
+	// Buttons
 	<div class="button-container">
 		<button id="upper-case">Uppercase</button>
 		<button id="lower-case">Lowercase</button>
 		<button id="proper-case">Proper Case</button>
 		<button id="sentence-case">Sentence Case</button>
+		<button id="save-text-file">Save Text File</button>
 	</div>
 
 </div>
